update regression lines

--- a/source/dialogs/curve-attribute/curve-attribute-modal.html
+++ b/source/dialogs/curve-attribute/curve-attribute-modal.html
@@ -47,10 +47,13 @@
                                             </div>
                                         </div>
                                     </div>
+                                </div>
+                                <hr>
+                                <div class="row">
                                     <div class="col-sm-12">
                                         <div class="form-group">
-                                            <label class="control-label col-sm-12">Line Color</label>
-                                            <div class="col-sm-12">
+                                            <label class="control-label col-sm-2">Line Color</label>
+                                            <div class="col-sm-9">
                                                 <div class="valign-middle pull-left" style="height: 23px; width: 90%;" ng-style="{'background-color':wiModal.lineOptions.lineStyle.lineColor}"></div>
                                                 <button ng-click="wiModal.lineColor();" class="wi-form-control">...</button>
                                             </div>
@@ -66,28 +69,6 @@
                                 <br>
                                 <div class="row">
                                     <div class="col-sm-8">
-                                        <!-- <div class="form-group">
-                                            <label class="control-label col-sm-4" for="style">Symbol Style</label>
-                                            <div class="col-sm-8">
-                                                <ui-select theme="bootstrap" ng-model="wiModal.symbolOptions.symbolStyle.symbolLineDash">
-                                                    <ui-select-match>
-                                                        <svg height="10" width="100%" class="col-sm-12">
-                                                            <line x1="0" y1="5" x2="100%" y2="5" stroke-dasharray="{{$select.selected.join(',')}}"
-                                                                    style="stroke: {{wiModal.symbolOptions.symbolStyle.symbolStrokeStyle}}; stroke-width: 1}"></line>
-                                                        </svg>
-                                                    </ui-select-match>
-                                                    <ui-select-choices repeat="style in wiModal.lineStyles" class="text-left">
-                                                        <div class="container-fluid">
-                                                            <svg height="10" width="100%" class="col-sm-12">
-                                                                <line x1="0" y1="5" x2="100%" y2="5" stroke-dasharray="{{style.join(',')}}"
-                                                                        style="stroke: {{wiModal.symbolOptions.symbolStyle.symbolStrokeStyle}}; stroke-width: 1"></line>
-                                                            </svg>
-                                                        </div>
-
-                                                    </ui-select-choices>
-                                                </ui-select>
-                                            </div>
-                                        </div> -->
                                         <div class="form-group">
                                             <label class="control-label col-sm-4">Symbol Type</label>
                                             <div class="col-sm-8">
@@ -109,9 +90,12 @@
                                             </div>
                                         </div>
                                     </div>
+                                </div>
+                                <hr>
+                                <div class="row">
                                     <div class="col-sm-12">
                                         <div class="form-group">
-                                            <label class="control-label col-sm-3">Border Color</label>
+                                            <label class="control-label col-sm-2">Border Color</label>
                                             <div class="col-sm-9">
                                                 <div class="valign-middle pull-left" style="height: 23px; width: 90%;" ng-style="{'background-color':wiModal.symbolOptions.symbolStyle.symbolStrokeStyle}"></div>
                                                 <button ng-click="wiModal.borderColor();" class="wi-form-control">...</button>
@@ -120,7 +104,7 @@
                                     </div>
                                     <hr>
                                 </div>
-                                <hr>
+                                <!-- <hr>
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <div class="form-group">
@@ -160,7 +144,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </form>
                         </div>
                     </wi-tab>
