--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -8,7 +8,7 @@
             <div class="modal-body padding-0">
                 <wi-tabset>
                     <wi-tab heading="General" enabled="wiModal.tabFlags[0]">
-                        <div ng-show="wiModal.tabFlags[0] == 'true'" class="container-fluid padding-top-2em padding-bottom-2em padding-left-4em generalTab">
+                        <div ng-show="wiModal.tabFlags[0] == 'true'" class="container-fluid padding-top-2em padding-bottom-2em padding-left-4em dialog-style">
                             <form action="" class="form-horizontal form-condensed">
                                 <div id="header">
                                     <h5 class="normal-text">Header</h5>
