--- a/source/dialogs/polygon-manager/polygon-manager-modal.html
+++ b/source/dialogs/polygon-manager/polygon-manager-modal.html
@@ -50,7 +50,7 @@
                             <span class="delete-16x16"></span>
                         </button>
                         <button class="btn btn-default" ng-click="wiModal.addRow();">
-                                <span class="ok-16x16"></span>
+                                <span class="plus-16x16"></span>
                         </button>
                     </div>
                 </div>
