--- a/source/dialogs/regression-line/regression-line-modal.html
+++ b/source/dialogs/regression-line/regression-line-modal.html
@@ -11,7 +11,7 @@
                         <form class="form-horizontal">
                             <table class="font-size-10px table table-bordered regressionLineTable">
                                 <thead>
-                                    <tr>
+                                    <!-- <tr>
                                         <td></td>
                                         <td></td>
                                         <td></td>
@@ -19,18 +19,18 @@
                                         <td></td>
                                         <td></td>
                                         <td></td>
-                                        <td colspan="10">Areas to select data</td>
+                                        <td>Areas to select data</td>
                                         <td colspan="2">Force Fit</td>
-                                    </tr>
+                                    </tr> -->
                                     <tr>
                                         <td></td>
-                                        <td style="widows: 7%">Display Line</td>
-                                        <td style="widows: 7%">Display Equation</td>
+                                        <td style="width: 7%">Display Line</td>
+                                        <td style="width: 7%">Display Equation</td>
                                         <td>Line Style</td>
                                         <td>Reg type</td>
-                                        <td style="widows: 7%">Inverse Reg</td>
+                                        <td style="width: 7%">Inverse Reg</td>
                                         <td>Include/Exclude</td>
-                                        <td style="widows: 3%">1</td>
+                                        <!-- <td style="widows: 3%">1</td>
                                         <td style="widows: 3%">2</td>
                                         <td style="widows: 3%">3</td>
                                         <td style="widows: 3%">4</td>
@@ -39,13 +39,14 @@
                                         <td style="widows: 3%">7</td>
                                         <td style="widows: 3%">8</td>
                                         <td style="widows: 3%">9</td>
-                                        <td style="widows: 3%">10</td>
-                                        <td>X</td>
-                                        <td>Y</td>
+                                        <td style="widows: 3%">10</td> -->
+                                        <td>Polygons</td>
+                                        <td>FitX</td>
+                                        <td>FitY</td>
                                     </tr>
                             </thead>
                                 <tbody>
-                                    <tr ng-repeat="regLine in wiModal.getRegressionLines()"
+                                    <tr ng-repeat="regLine in wiModal.getRegressionLines() track by $index"
                                     ng-class="{'selected':$index == selectedRow}"
                                     ng-click="wiModal.setClickedRow($index)">
                                         <td>{{$index+1}}</td>
@@ -59,12 +60,20 @@
                                                     ng-model="regLine.displayEquation"
                                                     ng-change="wiModal.onChange(regLine.index)">
                                         </td>
-                                        <td>
-                                            <button type="button" id="lineStyleBtn" 
+                                        <td>    
+                                            <div ng-model="regLine.lineStyle" id="lineStyleSvg" 
+                                                    ng-change="wiModal.onChange(regLine.index)"
+                                                    ng-click="wiModal.onEditLineStyleButtonClicked(regLine.index); wiModal.onChange(regLine.index)">
+                                                <svg height="20" width="75">
+                                                    <line x1="0" y1="10" x2="75" y2="10" 
+                                                            stroke-dasharray="{{regLine.lineStyle.lineStyle.join(',')}}"
+                                                            style="stroke:{{regLine.lineStyle.lineColor}};stroke-width:{{regLine.lineStyle.lineWidth}}" />
+                                                </svg>
+                                            </div>
+                                            <!-- <button type="button" 
                                                     ng-model="regLine.lineStyle"
                                                     ng-change="wiModal.onChange(regLine.index)"
-                                                    ng-click="wiModal.onEditLineStyleButtonClicked(regLine.index)"
-                                                    class="btn btn-default">Edit</button>
+                                                    ng-click="wiModal.onEditLineStyleButtonClicked(regLine.index)">...</button> -->
                                                 
                                         </td>
                                         <td>
@@ -86,46 +95,46 @@
                                                 class="form-control wi-form-control"
                                                 ng-change="wiModal.onChange(regLine.index)"
                                                 ng-options="(item?'Exclude':'Include') for item in [true, false]">
-                                                <!-- <option value="false">Include</option>
-                                                <option value="true">Exclude</option> -->
                                             </select>
                                         </td>
-                                        <td>
-                                            <input type="checkbox">
-                                        </td>
-                                        <td>
-                                            <input type="checkbox">
-                                        </td>
-                                        <td>
-                                            <input type="checkbox">
-                                        </td>
-                                        <td>
-                                            <input type="checkbox">
-                                        </td>
-                                        <td>
-                                            <input type="checkbox">
-                                        </td>
-                                        <td>
-                                            <input type="checkbox">
-                                        </td>
-                                        <td>
-                                            <input type="checkbox">
-                                        </td>
-                                        <td>
-                                            <input type="checkbox">
-                                        </td>
-                                        <td>
-                                            <input type="checkbox">
-                                        </td>
-                                        <td>
-                                            <input type="checkbox">
-                                        </td>
                                         <!-- <td>
-                                            <multiple-autocomplete ng-model="regLine.polygonIndices"
-                                                 suggestions-arr="wiModal.polygonIndicesList">
-                                            </multiple-autocomplete>
-                                            {{regLine.polygonIndices}}
+                                            <input type="checkbox">
+                                        </td>
+                                        <td>
+                                            <input type="checkbox">
+                                        </td>
+                                        <td>
+                                            <input type="checkbox">
+                                        </td>
+                                        <td>
+                                            <input type="checkbox">
+                                        </td>
+                                        <td>
+                                            <input type="checkbox">
+                                        </td>
+                                        <td>
+                                            <input type="checkbox">
+                                        </td>
+                                        <td>
+                                            <input type="checkbox">
+                                        </td>
+                                        <td>
+                                            <input type="checkbox">
+                                        </td>
+                                        <td>
+                                            <input type="checkbox">
+                                        </td>
+                                        <td>
+                                            <input type="checkbox">
                                         </td> -->
+                                        <td style="width: 15%">
+                                            <div ng-dropdown-multiselect=""
+                                                options="wiModal.polygonList" 
+                                                selected-model="regLine.polygons" 
+                                                extra-settings="selectDataSetting"
+                                                class="normal-text"></div>
+                                        </td>
+                                        
                                         <td style="width: 7%">
                                             <input type="number" ng-model="regLine.fitX"
                                                     class="form-control wi-form-control"
@@ -146,7 +155,7 @@
                             <span class="delete-16x16"></span>
                         </button>
                         <button class="btn btn-default" ng-click="wiModal.addRow();">
-                            <span class="ok-16x16"></span>
+                            <span class="plus-16x16"></span>
                         </button>
                     </div>
                 </div>
